<resources>
    <string name="app_name">NeedUNow</string>
    <string name="title_home">SOS</string>
    <string name="title_dashboard">Tips</string>
    <string name="title_notifications">Helplines</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="quote_home">\&quot;Asking for help is the bravest move you can make.\&quot;</string>
    <string name="tip_home">After pressing the button, an alert will be
      sent to your friends in 10 seconds</string>
    <string name="textview">name</string>
    <string name="hospital">Hospital</string>
    <string name="hospitalno">CALL 102</string>
<string name="str1">
    <ul>
        <li><i>first</i> item</li>
        <li>item 2</li>
    </ul>
</string>
    <string name="hospital_heading">Medical HelpLine</string>
    <string name="case1">- In case of any Medical Emergency</string>
    <string name="case2">- Breathing Difficulties</string>
    <string name="case3">- Immediate attention of medical professionals</string>
    <string name="national_helpline_number">National Helpline Number</string>
    <string name="todo">TODO</string>
    <string name="police_helpline">Police HelpLine</string>
    <string name="case5">- Report any crime</string>
    <string name="case6">- Need a Legal Help</string>
    <string name="case7">- In any threatened situation</string>
    <string name="policeno">CALL 100</string>
    <string name="case8">- Situation that might need immediate police attendance</string>
    <string name="case9">- Report Child Abuse</string>
    <string name="child_helpline">Child HelpLine</string>
    <string name="case10">- Report Child Labour</string>
    <string name="case11">- Child trafficking</string>
    <string name="case12">- In case of, unjust or forced behaviour of individuals towards children</string>
    <string name="childno">CALL 1098</string>
    <string name="setting">Setting</string>
    <string name="fire_helpline">Fire HelpLine</string>
    <string name="case13">- In case of, massive Fire outbreak</string>
    <string name="case14">- Rescue people caught in fire</string>
    <string name="case15">- Provide immediate medical help to victims</string>
    <string name="call_101">CALL 101</string>
    <string name="road_accident">Road Accident</string>
    <string name="case16">- In case of a severe vehicle crash</string>
    <string name="case17">- Provide immediate Medical help to people suffered from the crash </string>
    <string name="case18">- Hit and Run</string>
    <string name="women_helpline">Women Helpline</string>
    <string name="case19">- If you feel unsafe or threatened</string>
    <string name="case20">- In case of, intentional harm or violence</string>
    <string name="case21">- Held by someone who may be in possession of weapons</string>
    <string name="case22">- Report molestation</string>
    <string name="Tips_title">Emergency Situations</string>
    <string name="Tips_title2">What to do in</string>
    <string name="Accident_title">How to use our App in case of,</string>
    <string name="Accident_title2">Road Accidents</string>
    <string name="line1">- Press the SOS Button to send a Panic Message to your Emergency Contacts.</string>
    <string name="line2">- Specify the type of Emergency, if possible.</string>
    <string name="line3">- Call the Helpline Number immediately.</string>
    <string name="Tips_title3">What to do?</string>
    <string name="Tips_1">Take some deep breaths to get calm</string>
    <string name="Tips_1_body">Take a few deep breaths or count to 10 to calm down. The calmer you are, the better prepared you will be to handle the situation.</string>
    <string name="Tips_2">Keep yourself and other safe</string>
    <string name="Tips_2_body">If you can\'t get out of your car, or its not safe to try, keep your seatbelt fastened, turn on your hazard lights and then press SOS button. Wait for the help to arrive.</string>
    <string name="Tips_3">Check for injuries</string>
    <string name="Tips_3_body">Check on everyone involved in the crash to see if they have any injuries. If the injury is minor, use First-Aid. If needed, call the Ambulance immediately.</string>
    <string name="Tips_4">Prevent further traffic</string>
    <string name="Tips_4_body">If there are no injuries and your vehicle is driveable, make a reasonable effort to move the vehicle to a safe spot that is not blocking traffic (like the shoulder of a highway or a parking lot).</string>
    <string name="Tips_5">Take down information</string>
    <string name="Tips_5_body">Ask to see the license of the other drivers involved in the crash. Also get their name, address, phone number, insurance company, insurance policy number, and license plate number.</string>
    <string name="End1">BE SAFE, YOU ARE PRECIOUS!</string>
    <string name="Women_title">How to use our App for,</string>
    <string name="Women_title2">Woman\'s Safety</string>
    <string name="W__line1">- When feeling unsafe, press the SOS Button to send Panic Message.</string>
    <string name="W_line2">- Share your Live Location with your friends.</string>
    <string name="W_line3">- Call the Helpline Number immediately.</string>
    <string name="Women_1">Be aware of your surroundings</string>
    <string name="Women_1_body">If you\'re alone, or hiring a cab, beware of your surroundings. If things seem even a slight unsafe get out of that place immediately. Don\'t let your guard down.</string>
    <string name="Women_2">Notify your friends/family</string>
    <string name="Women_2_body">When you sense something NOT OKAY, immediately send your location and message your friends/family. Don\'t ignore such alarms.</string>
    <string name="Women_3">Unavoidable Situations</string>
    <string name="Women_3_body">In case you are in a sticky situation or feel exposed to the attacker, make an effort to press the SOS button. Scream so that people nearby can sense something wrong and help you. </string>
    <string name="Women_4">Carry self-defense products</string>
    <string name="Women_4_body">Carry a self-defense product, such as pepper spray or a stun gun. These non-lethal, inexpensive and small products can allow you to deter an attacker long enough for you to get away.</string>
    <string name="Women_5">Defend Yourself</string>
    <string name="Women_5_body">Don’t be afraid to use anything in your hand to defend yourself. Use keys, bottle even your purse to inflict damage to your attacker</string>
    <string name="Women_6">Following are the most vulnerable areas to attack:</string>
    <string name="Women_6_1">a. Use your knees to hit hard between the legs of the attacker.</string>
    <string name="Women_6_2">b. Using your fingers to poke hard in the eyes.</string>
    <string name="Women_6_3">c. Hitting front part of the neck on the Adams apple will leave him in a shock.</string>
    <string name="Women_6_4">d. Punching in the stomach will leave the attacker breathless and unable to chase you.</string>
    <string name="Women_6_5">e. Hitting hard in the chest area.</string>
    <string name="Fire_title">How to use our App in case of,</string>
    <string name="Fire_title2">Fire Outbreak</string>
    <string name="F_line1">- Press the SOS Button to send a Panic Message to your Emergency Contacts.</string>
    <string name="F_line2">- Specify the Emergency Type as \'Fire\'.</string>
    <string name="F_line3">- Call the Helpline Number immediately.</string>
    <string name="F_Tips_title3">What to do?</string>
    <string name="Fire_1">Act Immediately</string>
    <string name="Fire_1_body">Calm down, but act swiftly. Stay low in case of smoke or fumes and try to make your way out as soon as possible. Call the Helpline Numbers immediately, if possible.  </string>
    <string name="Fire_2">Check Doors when moving out</string>
    <string name="Fire_2_body">Feel the doorknob or higher on the door with the back of your hand. If it feels hot, fire may be on the other side of the door, so keep it shut. Stuff clothing, towels, or newspapers in the door’s cracks to keep smoke out.</string>
    <string name="Fire_3">Know your way out</string>
    <string name="Fire_3_body">Immediately evacuate the place. Use the stairs –NEVER use elevators. Elevators are normally tied to a fire detection system and are not available to occupants once the alarm sounds.</string>
    <string name="Fire_4">Pull Fire Alarm</string>
    <string name="Fire_4_body">If the alarm is not already activated, pull the fire alarm on your way out to make everyone aware. If there is no alarm to activate, yell “fire” as you leave.</string>
    <string name="Fire_5">Move to a safer place</string>
    <string name="Fire_5_body">Move quickly to an open area. Dial Helpline number, report the address and stay on the phone until the fire department arrives at the place. </string>
    <string name="Harm_title">How to use our App in case of,</string>
    <string name="Harm_title2">Intentional Harm</string>
    <string name="H_line1">- Press the SOS Button to send a Panic Message to your Emergency Contacts.</string>
    <string name="H_line2">- Send your location to your friends/family.</string>
    <string name="H_line3">- Call the Helpline Number immediately.</string>
    <string name="H_Tips_title3">What to do?</string>
    <string name="Harm_1">Escape the attacker</string>
    <string name="FAid_title">Importance of</string>
    <string name="FAid_title2">First-Aid Kit</string>
    <string name="FAid_line1">It\'s important to have a well-stocked first aid kit in your home so you can deal with minor accidents and injuries.</string>
    <string name="FAid_line2">A first aid kit is your go to for reducing the severity of the injury and preventing infection.</string>
    <string name="FAid_Tips_title3">A basic first aid kit may contain:</string>
    <string name="item1">Plasters in a variety of different sizes and shapes</string>
    <string name="item2">Small, medium and large sterile gauze dressings</string>
    <string name="item3">At least 2 sterile eye dressings</string>
    <string name="item4">Triangular bandages and crêpe rolled bandages</string>
    <string name="item5">Disposable sterile gloves</string>
    <string name="item6">Safety pins, tweezers, scissors</string>
    <string name="item7">Alcohol-free cleansing wipes</string>
    <string name="item8">Thermometer (preferably digital)</string>
    <string name="item9">Skin rash cream, such as hydrocortisone</string>
    <string name="item10">Cream or spray to relieve insect bites and stings</string>
    <string name="item11">Painkillers such as paracetamol</string>
    <string name="item12">Thermometer (preferably digital)</string>
    <string name="item13">Distilled water for cleaning wounds</string>
    <string name="instruction1">Instructions</string>
    <string name="lines1">Please grant all the required Permissions..</string>
    <string name="lines2">To set up your Profile, Go to -> Settings -> Personal Info</string>
    <string name="lines3">In case of Emergency, press the SOS button. This will send a Panic Message to your friends/family.</string>
    <string name="lines4">Specify the type of Emergency in which you\'re trapped by clicking on one of the following options (Women Safety, Accident, Fire). This will help your friends and family get more concrete information.</string>
    <string name="lines5">Know more about how to react in various Emergency Situations through Tips Screen.</string>
    <string name="lines6">Get Quick and One Tap Access to Helpline Numbers under Helpline Screen.</string>
    <string name="lines7">To edit your Personal Info, Contact Numbers, Panic Message anytime, Go to -> Settings -> Choose the operation you want to perform."</string>
    <string name="lines8">We recommend you to always keep your GPS turned ON.</string>
</resources>