<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:paddingTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:onClick="closeActivity"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:foregroundGravity="center"
            android:foregroundTint="?attr/colorOnSecondary"
            android:background="@android:color/transparent"
            android:foreground="@drawable/outline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bold"
            android:text="@string/FAid_title"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/bold"
            android:text="@string/FAid_title2"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:alpha="0.9"
            android:background="@drawable/gradient2">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/FAid_line1"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/semibold"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.024" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/semibold"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/FAid_line2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.698" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/bold"
            android:text="@string/FAid_Tips_title3"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item1"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item2"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item3"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item4"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item5"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item6"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item7"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item8"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item9"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item10"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item11"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item12"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/semibold"
            android:text="@string/item13"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            app:videoId="SKxQr49LV0Y"
            app:autoPlay="false"
            app:showFullScreenButton="false" />

    </LinearLayout>
</ScrollView>