<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/bold"
        android:text="@string/instruction1"
        android:textColor="@color/lightRed"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines1"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines2"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines3"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines4"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines5"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines6"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines7"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/semibold"
        android:text="@string/lines8"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button10"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        app:cornerRadius="20dp"
        android:onClick="goToHomePage"
        android:text="OK, GOT IT!" />

</LinearLayout>